--- a/env/example.env
+++ b/env/example.env
@@ -1,2 +1,9 @@
 NODE_ENV=example
 PORT=3333
+
+#################DataBase#########
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=mydb
+DATABASE_USER=postgres
+DATABASE_PASSWORD=secret
