--- a/env/example.env
+++ b/env/example.env
@@ -7,3 +7,13 @@ DATABASE_PORT=5432
 DATABASE_NAME=mydb
 DATABASE_USER=postgres
 DATABASE_PASSWORD=secret
+
+
+######Google Auth#####
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL = http://localhost:3000
+
+########JWT###########3
+JWT_SECRET=xyz
+JWT_EXPIRES_IN=30m
