--- a/env/example.env
+++ b/env/example.env
@@ -14,6 +14,11 @@ GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL = http://localhost:3000
 
-########JWT###########3
+########JWT###########
 JWT_SECRET=xyz
 JWT_EXPIRES_IN=30m
+
+
+######NodeMailer####
+APP_EMAIL_ADDRESS=yourEmail@gmail.com
+APP_PASSWORD=yourPassword
